Firebase: update Open API specification, start Http module
