# firebase/functions/src/Http/BadRequest.ts
@@ -1,0 +1,7 @@
+import { HttpError } from './HttpError';
+
+export class BadRequest extends HttpError {
+  constructor(message = 'Bad Request') {
+    super(400, message);
+  }
+}
