# firebase/functions/src/Http/InternalServerError.ts
@@ -1,0 +1,7 @@
+import { HttpError } from './HttpError';
+
+export class InternalServerError extends HttpError {
+  constructor(message = 'Internal Server Error') {
+    super(500, message);
+  }
+}
